--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -1,3 +1,38 @@
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav a {
+  color: #333;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: bold;
+}
+
+nav span a {
+  color: #333;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: bold;
+}
+
+nav span a:hover {
+  text-decoration: underline;
+}
+
+footer a {
+  color: #333;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: bold;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 .App {
   text-align: center;
 }
